--- a/2.0-Categorizing-your-Portfolio.md
+++ b/2.0-Categorizing-your-Portfolio.md
@@ -14,7 +14,7 @@ Perform the following activities before you begin the procedure tasks: 
 	
   2. tbd
 
-## Procedure
+## Procedure - tbd
 
 Use this procedure to xxx:
 
