--- a/1.0-Defining-a-Cloud-Strategy.md
+++ b/1.0-Defining-a-Cloud-Strategy.md
@@ -26,4 +26,4 @@ Use this procedure to xxx:
 
 ## Next steps
 
-add link to next topic
+{Categorizing your Portfolio](https://github.com/alvarovitta/Planning-Workload-Migration/blob/master/2.0-Categorizing-your-Portfolio.md)
