--- a/1.0-Defining-a-Cloud-Strategy.md
+++ b/1.0-Defining-a-Cloud-Strategy.md
@@ -1,28 +1,27 @@
 # Defining a Cloud Strategy - draft
 
-tbd
+The Cloud Strategy needs to be defined as a first step in planning your migration to the cloud.
 
 ## Guidance
 
-tbd
+The Cloud Strategy document:
+- Includes a summary of drivers, challenges, business, and end-user requirements
+- Defines the benefits to the business of leveraging the cloud
+- Documents business objectives and targets to be achieved from cloud use
+- Identifies challenges and risks associated with cloud adoption and migration
+- Defines Cloud for the organization - attributes, service models
+- Identifies the Cloud Program Team or Cloud Competency Center structure
+- Documents the cloud Strategy for consumption, building, securing, and managing hybrid applications
 
 ## Preparation
 
-Perform the following activities before you begin the procedure tasks: 
+1. Develop the Cloud Strategy Document, which clearly defines the cloud objectives for the organization.
 
-  1. tbd
-	
-  2. tbd
 
 ## Procedure
 
-Use this procedure to xxx:
-
-   1. tbd
-   
-   2. tbd
-   
-   3. tbd
+1. Assemble a team of business and technical stakeholders and leverage a workshop format to complete the Cloud Strategy document.
+2. Create and publish the Cloud Strategy document.
 
 ## Next steps
 
