--- a/1.0-Defining-a-Cloud-Strategy.md
+++ b/1.0-Defining-a-Cloud-Strategy.md
@@ -1,10 +1,17 @@
-# Defining a Cloud Strategy - draft
+# Defining a Cloud Strategy
 
-tbd
+The Cloud Strategy needs to be defined as a first step in planning your migration to the cloud.
 
 ## Guidance
 
-tbd
+The Cloud Strategy document:
+* Includes a summary of drivers, challenges, business, and end-user requirements
+* Defines why Cloud and why now and the benefits to the business of leveraging the cloud
+* Documents business objectives and targets to be achieved from cloud use
+* Identifies challenges and risks
+* Defines Cloud for the organization - attributes, service models
+* Identifies the Cloud Program Team or Cloud Competency Center structure
+* Documents the cloud Strategy for consumption, building, securing, and managing hybrid applications
 
 ## Preparation
 
@@ -16,13 +23,9 @@ Perform the following activities before you begin the procedure tasks: 
 
 ## Procedure
 
-Use this procedure to xxx:
-
-   1. tbd
-   
-   2. tbd
-   
-   3. tbd
+1. Assemble a team of business and technical stakeholders. This team should include application owners and IT service delivery managers. 
+   Leverage a workshop format to complete the Cloud Strategy document.
+2. Develop the Cloud Strategy Document, which clearly defines the cloud objectives for the organization.
 
 ## Next steps
 
