--- a/2.0-Categorizing-your-Portfolio.md
+++ b/2.0-Categorizing-your-Portfolio.md
@@ -1,29 +1,41 @@
 # Categorizing your Portfolio
 
-tbd
+Many organization have thousands of applications and workloads. To prioritize which workloads should move to the cloud first, organizations will want to work with smaller, more manageable sets of workloads. This is done through categorization of the portfolio.
 
 ## Guidance
 
-tbd
+To categorize the portfolio, an organization can group workloads according to selected criteria such as: 
+
+* Unclassified vs classified workloads 
+* Line of Business 
+* Similar business capabilities (e.g. all Case Management applications) 
+* Applications reaching end of life (EOL)
+* Pace of change
+
+Subdividing according to pace of change, lifetime, and planning horizon will further assist an organization in determining the appropriate "R" (Rehost, Refactor/Revise, Rebuild, Retire) migration strategy required. For example, an application that undergoes rapid, very frequent, and ad hoc changes on a weekly basis would be a great fit for the cloud. Categorizing the portfolio will help to identify areas for consolidation and rationalization.
+
+Use the following table to help categorize applications according to Pace of Change.
+
+<insert Pace of Change Guidance table here>
+	
+In categorizing the portfolio, identify the applications that will reach EOL in the next 1-3 years, and place them in a separate group. These applications and their associated workloads would not be assessed initially because they are not a good fit for the cloud since there will be little to no investment in the applications.
 
 ## Preparation
 
-Perform the following activities before you begin the procedure tasks: 
+Many enterprises already have an application portfolio management system in which a list of applications and workloads is maintained. This can be leveraged for cloud assessment purposes. Others might need to use an ad hoc tool such as a spreadsheet. Either can be effective.
 
-  1. tbd
-	
-  2. tbd
+Obtain access to the organization's Application Portfolio Management system or system where an inventory of workload and application information is kept.
+
+Create an initial set of categories using the Guidance above. At a minimum, there should be a category for Applications nearing End-of-Life.
 
 ## Procedure - tbd
 
-Use this procedure to xxx:
-
-   1. tbd
-   
-   2. tbd
-   
-   3. tbd
+1. Assemble a team of stakeholders to review the organization's application portfolio; this team can be composed of application owners, 
+   IT support team, Cloud Program Team, business analysts
+2. Review initial set of categories with stakeholders and determine final set
+3. Assign a category to each workload and document. A workload can be part of more than one category (e.g. rapid pace of change and 
+   customer relationship management)
 
 ## Next steps
 
-add link to next topic
+<link to: Assessing your Workloads for Cloud Suitability>
