--- a/1.0-Defining-a-Cloud-Strategy.md
+++ b/1.0-Defining-a-Cloud-Strategy.md
@@ -8,23 +8,39 @@ The Cloud Strategy document:
 * Includes a summary of drivers, challenges, business, and end-user requirements
 * Defines why Cloud and why now and the benefits to the business of leveraging the cloud
 * Documents business objectives and targets to be achieved from cloud use
+* Defines how Cloud adoption success will be measured
 * Identifies challenges and risks
 * Defines Cloud for the organization - attributes, service models
 * Identifies the Cloud Program Team or Cloud Competency Center structure
 * Documents the cloud Strategy for consumption, building, securing, and managing hybrid applications
 
+In order to achieve this objective the following high-level recommendations are provided:
+• Commit to a Cloud Readiness journey – This will require allocation of resources, time and management commitment.  The sustained effort   will only occur with an organizational commitment
+• Form a cloud program team – The efforts required cross organizational boundaries, and are multi-factored.  As a result a team needs to   be created with a focus on achieving the desired results.
+• Include the business as stakeholders in the process – Organizations that are successful in cloud adoption have strong business       
+  commitment and involvement in the process.
+• Engage Application support and release management – Changes to the application development, support, and release management processes 
+  will form a core part of the readiness required to adopt the cloud.
+• Engage current Service providers to participate – leverage existing relationships and partnerships with existing technology 
+  suppliers that need to engage in the process and may form a vital part of the cloud hosting eco-system.
+• Treat the adoption and readiness as a program with projects covering
+	o Contracts
+	o Service Management
+	o Security and compliance
+	o Operations Readiness
+	o Application development 
+	o Infrastructure
+
 ## Preparation
-
-Perform the following activities before you begin the procedure tasks: 
-
-  1. tbd
-	
-  2. tbd
+1. Identify the Cloud program team
+2. Identify key business and technical stakeholders
+3. Identify the Application support and release management team
+4. Engage with strategic service providers
 
 ## Procedure
 
-1. Assemble a team of business and technical stakeholders. This team should include application owners and IT service delivery managers. 
-   Leverage a workshop format to complete the Cloud Strategy document.
+1. Assemble a team of business and technical stakeholders as identified in the preparation phase. This team should include application 
+   owners and IT service delivery managers. Leverage a workshop format to complete the Cloud Strategy document.
 2. Develop the Cloud Strategy Document, which clearly defines the cloud objectives for the organization.
 
 ## Next steps
