I have made a change

--- a/1.0-Defining-a-Cloud-Strategy.md
+++ b/1.0-Defining-a-Cloud-Strategy.md
@@ -15,7 +15,7 @@ The Cloud Strategy document:
 * Documents the cloud Strategy for consumption, building, securing, and managing hybrid applications
 
 In order to achieve this objective the following high-level recommendations are provided:
-• Commit to a Cloud Readiness journey – This will require allocation of resources, time and management commitment.  The sustained effort   will only occur with an organizational commitment
+• Commit to a Cloud Readiness journey – This will require allocation of resources, time and management commitment.  The 		sustained effort   will only occur with an organizational commitment - this is a test
 • Form a cloud program team – The efforts required cross organizational boundaries, and are multi-factored.  As a result a team needs to   be created with a focus on achieving the desired results.
 • Include the business as stakeholders in the process – Organizations that are successful in cloud adoption have strong business       
   commitment and involvement in the process.
