--- a/1.0-Defining-a-Cloud-Strategy.md
+++ b/1.0-Defining-a-Cloud-Strategy.md
@@ -15,21 +15,22 @@ The Cloud Strategy document:
 * Documents the cloud Strategy for consumption, building, securing, and managing hybrid applications
 
 In order to achieve this objective the following high-level recommendations are provided:
-• Commit to a Cloud Readiness journey – This will require allocation of resources, time and management commitment.  The 		sustained effort   will only occur with an organizational commitment - this is a test
-• Form a cloud program team – The efforts required cross organizational boundaries, and are multi-factored.  As a result a team needs to   be created with a focus on achieving the desired results.
-• Include the business as stakeholders in the process – Organizations that are successful in cloud adoption have strong business       
-  commitment and involvement in the process.
-• Engage Application support and release management – Changes to the application development, support, and release management processes 
-  will form a core part of the readiness required to adopt the cloud.
-• Engage current Service providers to participate – leverage existing relationships and partnerships with existing technology 
-  suppliers that need to engage in the process and may form a vital part of the cloud hosting eco-system.
-• Treat the adoption and readiness as a program with projects covering
-	o Contracts
-	o Service Management
-	o Security and compliance
-	o Operations Readiness
-	o Application development 
-	o Infrastructure
+* Commit to a Cloud Readiness journey – This will require allocation of resources, time and management commitment.  The 		sustained effort   will only occur with an organizational commitment - this is a test
+* Form a cloud program team – The efforts required cross organizational boundaries, and are multi-factored.  As a result 
+	a team needs to   be created with a focus on achieving the desired results.
+* Include the business as stakeholders in the process – Organizations that are successful in cloud adoption have strong 
+	business commitment and involvement in the process.
+* Engage Application support and release management – Changes to the application development, support, and release 	
+	management processes will form a core part of the readiness required to adopt the cloud.
+* Engage current Service providers to participate – leverage existing relationships and partnerships with existing 
+  technology suppliers that need to engage in the process and may form a vital part of the cloud hosting eco-system.
+* Treat the adoption and readiness as a program with projects covering
+	- Contracts
+	-  Service Management
+	-  Security and compliance
+	-  Operations Readiness
+	-  Application development 
+	-  Infrastructure
 
 ## Preparation
 1. Identify the Cloud program team
