--- a/1.0-Defining-a-Cloud-Strategy.md
+++ b/1.0-Defining-a-Cloud-Strategy.md
@@ -40,8 +40,8 @@ In order to achieve this objective the following high-level recommendations are 
 
 ## Procedure
 
-1. Assemble a team of business and technical stakeholders as identified in the preparation phase. This team should include application 
-   owners and IT service delivery managers. Leverage a workshop format to complete the Cloud Strategy document.
+1. Assemble a team of business and technical stakeholders as identified in the preparation phase. This team should 
+	 include application owners and IT service delivery managers. Leverage a workshop format to complete the Cloud Strategy document.
 2. Develop the Cloud Strategy Document, which clearly defines the cloud objectives for the organization.
 
 ## Next steps
