--- a/1.0-Defining-a-Cloud-Strategy.md
+++ b/1.0-Defining-a-Cloud-Strategy.md
@@ -24,13 +24,14 @@ In order to achieve this objective the following high-level recommendations are 
 	management processes will form a core part of the readiness required to adopt the cloud.
 * Engage current Service providers to participate – leverage existing relationships and partnerships with existing 
   technology suppliers that need to engage in the process and may form a vital part of the cloud hosting eco-system.
-* Treat the adoption and readiness as a program with projects covering
+* Treat the adoption and readiness as a program with projects covering:
+
 	- Contracts
-	-  Service Management
-	-  Security and compliance
-	-  Operations Readiness
-	-  Application development 
-	-  Infrastructure
+	- Service Management
+	- Security and compliance
+	- Operations Readiness
+	- Application development 
+	- Infrastructure
 
 ## Preparation
 1. Identify the Cloud program team
