--- a/2.0-Categorizing-your-Portfolio.md
+++ b/2.0-Categorizing-your-Portfolio.md
@@ -28,13 +28,11 @@ Obtain access to the organization's Application Portfolio Management system or s
 
 Create an initial set of categories using the Guidance above. At a minimum, there should be a category for Applications nearing End-of-Life.
 
-## Procedure - tbd
+## Procedure
 
-1. Assemble a team of stakeholders to review the organization's application portfolio; this team can be composed of application owners, 
-   IT support team, Cloud Program Team, business analysts
+1. Assemble a team of stakeholders to review the organization's application portfolio; this team can be composed of          application owners, IT support team, Cloud Program Team, business analysts
 2. Review initial set of categories with stakeholders and determine final set
-3. Assign a category to each workload and document. A workload can be part of more than one category (e.g. rapid pace of change and 
-   customer relationship management)
+3. Assign a category to each workload and document. A workload can be part of more than one category (e.g. rapid pace of     change and customer relationship management)
 
 ## Next steps
 
