--- a/2.1-Assessing-your-Workloads-for-Cloud-Suitability.md
+++ b/2.1-Assessing-your-Workloads-for-Cloud-Suitability.md
@@ -2,9 +2,27 @@
 
 One of the most significant activities in any cloud migration is examining the application portfolio to help determine cloud migration plans. This activity will likely be iterated many times as new cloud capabilities emerge and new cloud candidates are revealed. Organizations therefore need a streamlined, repeatable, and effective process for portfolio assessment.
 
+The specific approach an organization uses to assess the portfolio for cloud readiness will depend heavily on a number of factors, including:
+
+* The business motivations for performing a portfolio assessment
+* The architectural principles for performing a portfolio assessment
+* Existing capabilities in application portfolio management (APM) and cloud computing
+* Existing methodologies used to perform and govern APM
+
+This section discusses how each of these factors can impact how APM is performed.
+
+Microsoft has developed a number of tools to help drive the processes of making decisions about the application portfolio and approaches to cloud computing based on business drivers. These are detailed in this section.
+
 ## Guidance
 
-tbd
+There are two fundamental ways in which business drivers and needs influence the results of an application portfolio assessment for cloud readiness.
+
+* Business motivations influence how portfolio decisions are made and these decisions drive which cloud capabilities are 
+  adopted
+* Business motivations influence the future cloud state, which provides different options for the application portfolio 
+  future state
+
+In <Defining-a-Cloud-Strategy>, we identify the objectives for going to the Cloud.  These objectives form the business motivations that drive which cloud capabilities will be adopted and which cloud models will be assigned to workloads.
 
 ## Preparation
 
