--- a/2.1-Assessing-your-Workloads-for-Cloud-Suitability.md
+++ b/2.1-Assessing-your-Workloads-for-Cloud-Suitability.md
@@ -1,4 +1,4 @@
-# Assessing your Workloads for Cloud Suitability - draft
+# Assessing your Workloads for Cloud Suitability
 
 One of the most significant activities in any cloud migration is examining the application portfolio to help determine cloud migration plans. This activity will likely be iterated many times as new cloud capabilities emerge and new cloud candidates are revealed. Organizations therefore need a streamlined, repeatable, and effective process for portfolio assessment.
 
