--- a/2.1-Assessing-your-Workloads-for-Cloud-Suitability.md
+++ b/2.1-Assessing-your-Workloads-for-Cloud-Suitability.md
@@ -22,7 +22,7 @@ There are two fundamental ways in which business drivers and needs influence the
 * Business motivations influence the future cloud state, which provides different options for the application portfolio 
   future state
 
-In <Defining-a-Cloud-Strategy>, we identify the objectives for going to the Cloud.  These objectives form the business motivations that drive which cloud capabilities will be adopted and which cloud models will be assigned to workloads.
+In Defining-a-Cloud-Strategy, we identify the objectives for going to the Cloud.  These objectives form the business motivations that drive which cloud capabilities will be adopted and which cloud models will be assigned to workloads.
 
 ## Preparation
 
