--- a/2.1-Assessing-your-Workloads-for-Cloud-Suitability.md
+++ b/2.1-Assessing-your-Workloads-for-Cloud-Suitability.md
@@ -24,6 +24,10 @@ There are two fundamental ways in which business drivers and needs influence the
 
 In Defining-a-Cloud-Strategy, we identify the objectives for going to the Cloud.  These objectives form the business motivations that drive which cloud capabilities will be adopted and which cloud models will be assigned to workloads.
 
+For example, cloud-specific principles could include favoring public cloud over private cloud, or choosing software as a service (SaaS) solutions over platform as a service (PaaS), or PaaS over infrastructure as a service (IaaS).
+
+A set of cloud-specific architectural principles helps provide a concrete context for portfolio assessment, but it is essential to link these principles back clearly to the business drivers and needs, or the rationale for the decision making will be lost. It is also important to note that different architectural principles can apply to different segments of the portfolio.
+
 ## Preparation
 
 Perform the following activities before you begin the procedure tasks: 
