--- a/2.1.2-Segmenting-Workloads-by-Model.md
+++ b/2.1.2-Segmenting-Workloads-by-Model.md
@@ -1,6 +1,13 @@
 # Segmenting your Workloads by Cloud Model - draft
 
-tbd
+After a detailed assessment of the application portfolio is complete, it should now be possible to determine the dispensation of each application in the portfolio. Gartner has identified five options for migrating applications to a cloud environment.
+
+*	Rehost
+*	Refactor
+*	Revise
+*	Rebuild
+*	Replace
+
 
 ## Guidance
 
