new content 2:28pm

--- a/2.1.1-Profiling-your-Workloads.md
+++ b/2.1.1-Profiling-your-Workloads.md
@@ -1,10 +1,22 @@
 # Profiling your Workloads - draft
 
-tbd
+Perform detailed analysis on the potential cloud candidates identified in the portfolio.
 
 ## Guidance
 
-tbd
+The purpose of a detailed assessment is to gain a deep enough understanding of each application to determine whether, and if so how, its functionality should be provided in the cloud. This process involves examining existing applications from a number of different perspectives, including:
+
+* Workload characteristics, such as elasticity, scalability, resource intensiveness, latency, and throughput)
+  Architecture characteristics, such as UI complexity, device compatibility, application complexity, application life 
+  expectancy, requirements for use of structured and unstructured data,  and life expectancy of existing hardware
+* Financial characteristics, including the operating cost of the existing application (for many organizations this will be
+  an estimate, based on peer data or sampling).
+* Risk characteristics, including organizational risk, business criticality, technical risk, resource risks and      
+  contractual risks.
+* Operations characteristics, such as requirements for business continuity, tools to support the application, and ease of 
+  deployment.
+* Security and compliance considerations, such as requirements associated with data jurisdiction, regulatory compliance, 
+  privacy, and encryption.
 
 ## Preparation
 
