--- a/2.0-Categorizing-your-Portfolio.md
+++ b/2.0-Categorizing-your-Portfolio.md
@@ -36,4 +36,4 @@ Create an initial set of categories using the Guidance above. At a minimum, ther
 
 ## Next steps
 
-<link to: Assessing your Workloads for Cloud Suitability>
+Assessing your Workloads for Cloud Suitability
