--- a/2.1.1-Profiling-your-Workloads.md
+++ b/2.1.1-Profiling-your-Workloads.md
@@ -20,11 +20,53 @@ The purpose of a detailed assessment is to gain a deep enough understanding of e
 
 ## Preparation
 
-Perform the following activities before you begin the procedure tasks: 
+For each workload being assessed gather the following information: 
 
-  1. tbd
+  1. Capability - e.g. CRM, ERP, HR, etc.
 	
-  2. tbd
+  2. Name of workload
+
+  3. Business Owner name
+
+  4. Technical Owner name
+
+  5. Workload characteristics
+     
+     Elasticity
+     1. Low (Consistent load)
+     2. Med Low (Moderate spikes regularly)
+     3. Med (Moderate spikes occasionally)
+     4. Med High (Severe spikes regularly)
+     5. High (Severe spikes occasionally) 
+
+     Scalability
+     1. Consistent Load
+     2. Slow, Linear Growth
+     3. Fast, Linear Growth
+     4. Known Exponential Growth
+     5. Forecasted Exponential Growth with Unknown Dates and Growth
+
+     Resource Intensiveness
+     1. Informational
+     3. Single dimension analysis
+     5. Multi-dimensional analysis such as required by certain scientific capabilities
+
+     Latency
+     1. > 500ms
+     2. < 500ms
+     3. < 200ms (Consumer web application)
+     4. < 100ms
+     5. High Performance Computing (<1ms)
+
+     Throughput
+     1. < 1 Mbps
+     2. 1-5 Mbps
+     3. 5-25 Mbps
+     4. 25-50 Mbps
+     5. > 100 MBps (Multi-media and gaming)
+
+
+
 
 ## Procedure
 
