--- a/2.1.5-Interpreting-your-Results.md
+++ b/2.1.5-Interpreting-your-Results.md
@@ -1,10 +1,21 @@
 # Interpreting your Results - draft
 
-tbd
+The Dashboard Worksheet presents the results of the  Assessment on one page. This page is printable and contains both a general summary of the analysis results and the detailed results for the high-priority applications by segment. 
 
 ## Guidance
 
-tbd
+The Dashboard is fully automated, and it contains two sections of results:
+
+* Prioritized Application Segments: displays the prioritized segments with the recommended service models and 
+  corresponding definitions, as displayed in Figure 3. The results for this section are sourced from the “Prioritize Alternatives” worksheet of the tool where the EA and customer defined the level of support provided by one of the four segments to deliver a migration objective. Based on the worked example results below, the highest priority segment is “Replace” so all applications in this segment should be prioritized first.
+
+*	Highest-Priority Applications by Segment: displays the prioritized applications within each of the four segments and  
+  the scores reflecting the ease of migration, degree of benefits from the migration, and the overall score. Figure 4 shows the prioritized list of applications, and the graph on the right visually displays theses prioritized applications and their specific segment. The horizontal axis represents the degree of benefits, while the vertical axis represents the ease of migration. The graph is divided into four quadrants:
+  
+  - Opportunistic: applications that are the easiest to migrate but have low benefits (short term opportunities).
+  -	Quick Wins: applications that are the easiest to migrate and have the highest benefits (short term opportunities).  
+  -	Supporting: applications with low ease of migration and low benefits (long term opportunities). 
+  -	Strategic: applications with low ease of migration but high benefits (long term opportunities).
 
 ## Preparation
 
