--- a/2.1.1-Profiling-your-Workloads.md
+++ b/2.1.1-Profiling-your-Workloads.md
@@ -63,7 +63,7 @@ For each workload being assessed gather the following information: 
      2. 1-5 Mbps
      3. 5-25 Mbps
      4. 25-50 Mbps
-     5. > 100 MBps (Multi-media and gaming)
+     5. '> 100 MBps (Multi-media and gaming)
 
 
 
