--- a/2.1.1-Profiling-your-Workloads.md
+++ b/2.1.1-Profiling-your-Workloads.md
@@ -18,7 +18,7 @@ The purpose of a detailed assessment is to gain a deep enough understanding of e
 * Security and compliance considerations, such as requirements associated with data jurisdiction, regulatory compliance, 
   privacy, and encryption.
 
-## Preparation
+## Preparation - long section
 
 For each workload being assessed gather the following information: 
 
@@ -32,68 +32,69 @@ For each workload being assessed gather the following information: 
 
   5. Workload characteristics - for each workload assign a value for each of the criteria below
      
-     Elasticity
+     Elasticity - the ability to dynamically provision and de-provision resources to match the demand.
      1 = Low (Consistent load)
      2 = Med Low (Moderate spikes regularly)
      3 = Med (Moderate spikes occasionally)
      4 = Med High (Severe spikes regularly)
      5 = High (Severe spikes occasionally) 
 
-     Scalability
+     Scalability - the ability to add new resources as required.
      1 = Consistent Load
      2 = Slow, Linear Growth
      3 = Fast, Linear Growth
      4 = Known Exponential Growth
      5 = Forecasted Exponential Growth with Unknown Dates and Growth
 
-     Resource Intensiveness
+     Resource Intensiveness - the amount of compute load of the application.
      1 = Informational
      3 = Single dimension analysis
      5 = Multi-dimensional analysis such as required by certain scientific capabilities
 
-     Latency
+     Latency - the time required to perform some action or to produce some result.
      1 = Greater than 500ms
      2 = Less than 500ms
      3 = Less than 200ms (Consumer web application)
      4 = Less than 100ms
      5 = High Performance Computing (<1ms)
 
-     Throughput
+     Throughput - the number of such actions executed or results produced per unit of time
      1 = Less than 1 Mbps
      2 = 1-5 Mbps
      3 = 5-25 Mbps
      4 = 25-50 Mbps
      5 = Greater than 100 MBps (Multi-media and gaming)
      
-  6. User Interface Architecture - - for each workload assign a value for each of the criteria below
+  6. User Interface Architecture - for each workload assign a value for each of the criteria below
     
-    Complexity
+    Complexity - Number of custom user interface pages determines the complexity of the UI
     1 = All Custom, Branded Pages (>50) & Navigation (Many wizards, branded buttons and links)
     3 = Some Custom Pages (~30) & Navigation (A few buttons, but mostly standard)
     5 = Standard COTS (All Standard)   
     
-    Access Points
+    Access Points - The more access points required the greater the benefit of going to the cloud
     1 = No Mobile or Offline Requirements
     3 = Partial Mobile and Offline Requirements
     5 = Full Mobile and Offline Requirements
 
   7. Architecture (Application) - for each workload, assign a value for each of the criteria below
 
-    Complexity
+    Application Complexity - Number of integrations with other applications and number of tiers determines the complexity of the app.
     1 = High (N tier simple application, high integration w apps (10+))
     2 = Med High, (N tier, med integration w/other apps (5-10))
     3 = Med, (N tier,  low integration w/other apps (2-5))
     4 = Med Low, (UI with database backend)
     5 = Low, (UI stand-alone application)
 
-    Size
+    Application Size - The greater the lines of code the more difficult it is to migrate.
     1 = Greater than 250k Lines of Code
     2 = 100k-250k LOC
     3 = 25k-100k LOC
     4 = 5k-25k LOC
     5 = Less than 5k LOC
 
-    Application Life Expectancy
+    Application Life Expectancy - The shorter the life expectancy the greater the advantages of moving to the cloud. Here,we are considering app life expectancy in terms of the technologies that are used to build the app; if those technologies are nearing end of support (e.g. Windows 2008), then they are ripe for moving to the cloud.
+
     1 = Greater than 3 years
     2 = 2-3 years
     3 = 1-2 years 
@@ -102,26 +103,26 @@ For each workload being assessed gather the following information: 
 
   8. Architecture (Data) - for each workload, assign a value fo each of the criteria below
 
-   Structured Magnitude
+   Structured Magnitude - The fewer the number of data objects the easier to migrate.
    1 = Millions of objects and Greater
    3 = Hundreds of thousands of Objects
    5 = Tens of Thousands of Objects and Fewer  
 
-   Unstructured Requirements
+   Unstructured Requirements - The smaller the quantity the easier to migrate
    1 = Greater than 100 TB
    2 = 10 - 100 TB
    3 = 500 GB - 10 TB
    4 = 5 GB - 500 GB
    5 = Less than 5 GB
 
-   Complexity
+   Complexity - description?
    1 = Many Data Sources (>10) requiring fuzzy logic to cleanse with no direct DB, API, or ETL available
    3 = Some Data Sources (4-7) requiring straightforward ETLs
    5 = One source, no cleanse required, and direct DB or API available
 
   9. Architecture (Infrastructure)
 
-    Hardware Life Expectancy
+    Hardware Life Expectancy - description?
     1. Greater than 5 years
     2. 3-4 years
     3. 2-3 years
@@ -129,7 +130,8 @@ For each workload being assessed gather the following information: 
     5. Less than 1 year
 
   10. Financial
-    Operating Cost
+
+    Operating Cost - description?
     1 = Low, Virtually no op costs
     2 = Med Low, No SLAs, Minimal staffing
     3 = Med, Moderate SLAs, Minimal staffing
