--- a/2.1.1-Profiling-your-Workloads.md
+++ b/2.1.1-Profiling-your-Workloads.md
@@ -115,14 +115,14 @@ For each workload being assessed gather the following information: 
    4 = 5 GB - 500 GB
    5 = Less than 5 GB
 
-   Complexity - description?
+   Data Complexity - The fewer number of data sources the easier to migrate.
    1 = Many Data Sources (>10) requiring fuzzy logic to cleanse with no direct DB, API, or ETL available
    3 = Some Data Sources (4-7) requiring straightforward ETLs
    5 = One source, no cleanse required, and direct DB or API available
 
-  9. Architecture (Infrastructure)
+  9. Architecture (Infrastructure) 
 
-    Hardware Life Expectancy - description?
+    Hardware Life Expectancy - The shorter the life expectancy the greater the advantages of moving to the cloud.
     1. Greater than 5 years
     2. 3-4 years
     3. 2-3 years
@@ -131,16 +131,72 @@ For each workload being assessed gather the following information: 
 
   10. Financial
 
-    Operating Cost - description?
+    Operating Cost - Financials are a crucial component to any project, as with many transformations, cloud migration usually garners financial benefits in order to understand the return on investment (ROI) the current cost must be measured.
     1 = Low, Virtually no op costs
     2 = Med Low, No SLAs, Minimal staffing
     3 = Med, Moderate SLAs, Minimal staffing
     4 = Med High, High SLAs, some staffing
     5 = High, High SLAs, recovery,  large staffing
     
+  11. Risks
+    Organizational - How prepared is the organizational unit with Cloud management?
+    1 = Catastrophic: Org is unaware and unprepared
+    2 = Net loss: Org is unprepared
+    3 = Break-even: Org is partially ready
+    4 = Marginal: Weak alignment to strategy
+    5 = None: Aligns with strategy and org is prepared
 
+    Business Criticality of the Workload - The less critical the application is to the business the easier the justification to migrate.
 
+    1 = Mission Critical
+    2 = Above Average
+    3 = Average Support
+    4 = Minimal Support
+    5 = Non-Essential
 
+    Technical Risk - The more aligned the application architecture is to cloud the easier it is to migrate and the less risk incurred.
+
+    1 = Catastrophic: Grave dependency or encryption issues
+    2 = Net loss:  Key incompatibilities
+    3 = Break-even: Moderate incompatibilities
+    4 = Marginal: New technologies
+    5 = None: Perfect architectural fit
+
+    Resource Risk - The more skilled the staff is with current app and cloud technologies the easier to migrate.
+
+    1 = Catastrophic: No required staff
+    2 = Net loss
+    3 = Break-even: Staff skilled with cloud technology, but not current application
+    4 = Marginal
+    5 = None: Staff has intimate understanding of the current application and cloud technology
+
+    Contractual Risk - A workload whose move to the cloud would put enterprise contracts and business at risk, is not a good fit for the cloud.
+
+    1 = Catastrophic: Puts enterprise contracts at risk
+    2 = Net loss
+    3 = Break-even: Puts contracts, with significant investment, at risk
+    4 = Marginal
+    5 = None: Puts no contracts at risk
+
+  12. Operations  
+    Business Continuity
+    1 = Availability not critical
+    2 = Low Availability required (90%)
+    3 = Moderate Availability required (99% - "two nines")
+    4 = High Availability required (99.9% - "three nines")
+    5 = Highest Availability and SLA is critical (99.999% - "five nines")
+    
+    Tools
+    1 = Very Low: No monitoring tools in use
+    2 = Low: Antiquated, ineffective monitoring tool in use
+    3 = Moderate: Isolated monitoring tool
+    4 = High: Integrated monitoring and reporting
+    5 = Very High: Integrated app monitoring, reporting, and alerting tools in use
+
+    Deployment
+    1 = Simple, infrequent deployment
+    3 = Regular, managed deployments with occasional issues
+    5 = Complex, frequent, highly interactive and involved deployment process
 
 ## Procedure
 
