--- a/2.1.1-Profiling-your-Workloads.md
+++ b/2.1.1-Profiling-your-Workloads.md
@@ -179,35 +179,64 @@ For each workload being assessed gather the following information: 
     5 = None: Puts no contracts at risk
 
   12. Operations  
-    Business Continuity
+    Business Continuity - The greater the requirement for availability the greater the benefit in moving to the cloud.
+
     1 = Availability not critical
     2 = Low Availability required (90%)
     3 = Moderate Availability required (99% - "two nines")
     4 = High Availability required (99.9% - "three nines")
     5 = Highest Availability and SLA is critical (99.999% - "five nines")
     
-    Tools
+    Tools Integration - Complexity of integration with existing monitoring and management tools reduces the fit for cloud as additional work is required to ensure the application is integrated with an existing ecosystem
+
     1 = Very Low: No monitoring tools in use
     2 = Low: Antiquated, ineffective monitoring tool in use
     3 = Moderate: Isolated monitoring tool
     4 = High: Integrated monitoring and reporting
     5 = Very High: Integrated app monitoring, reporting, and alerting tools in use
 
-    Deployment
+    Deployment - The more complex and frequent and involved is the deployment process the greater the benefit in moving to the cloud and adopting a DevOps mentality.
+
     1 = Simple, infrequent deployment
     3 = Regular, managed deployments with occasional issues
     5 = Complex, frequent, highly interactive and involved deployment process
 
+  13. Security and Compliance -- <update from here>
+    
+    Jurisdiction - The fewer restrictions the easier to migrate to the cloud. 
+    1 = Local restrictions
+    2 = Restricted to a region
+    3 = Restricted to a nation
+    4 = Restricted to continent
+    5 = No restrictions
+
+    Regulation - The fewer restrictions the easier to migrate to the cloud.
+    1 = Show-stopping regulations
+    3 = Standard, manageable regulations
+    5 = No relevant regulations
+
+    Privacy - 
+    1 = Critical Sensitivity, exposure yields severe business impact
+    2 = High Sensitivity, exposure yields significant to serious business impact
+    3 = Medium Sensitivity, medium business impact
+    4 = Low Sensitivity, low business impact
+    5 = All data is public
+
+    Encryption
+    1 = Unique client encryption methodology
+    3 = Standard industry encryption method
+    5 = No encryption required
+
 ## Procedure
 
-Use this procedure to xxx:
+Use this procedure to perform an initial workload assessment to help identify where workloads should go and to prioritize the workload migration to the cloud:
 
-   1. tbd
+   1. Access/download the Workload Assessment Tool from (add link)
    
-   2. tbd
+   2. Fill out the Profile Applications worksheet with the information gathered in the Preparation section.
    
-   3. tbd
+   3. Save the file
 
 ## Next steps
 
-Segmenting Workloads by Cloud Service Model
+Segmenting Workloads by Cloud Service Model (add hyperlink)
