--- a/2.1.2-Segmenting-Workloads-by-Model.md
+++ b/2.1.2-Segmenting-Workloads-by-Model.md
@@ -1,36 +1,112 @@
 # Segmenting your Workloads by Cloud Model - draft
 
-After a detailed assessment of the application portfolio is complete, it should now be possible to determine the dispensation of each application in the portfolio. Gartner has identified five options for migrating applications to a cloud environment.
-
-*	Rehost
-*	Refactor
-*	Revise
-*	Rebuild
-*	Replace
-
+After having profiled the workloads in the portfolio, you will understand which ones are suitable for the cloud.  However,there is still a need to determine which cloud service model is best suited for that workload (application).  This is done by Segmenting Applications per Cloud Service Model.  
 
 ## Guidance
 
-tbd
+Gartner has identified five options for migrating applications to a cloud environment.
+
+*	Rehost (IaaS)
+*	Refactor/Revise (IaaS/PaaS)
+*	Rebuild (PaaS)
+*	Replace (SaaS)
+
+We want to know which alternative best suits each workload.
+
+(may want to insert a table here)
+# When is a workload a candidate for Rehost? (IaaS)
+* The system admin team can assemble a VM image with full application stack and configure the necessary hardware.
+* Third party software can be run in the VM and is supported by the vendor.
+* The application has a "thin client" form factor.
+* The application does not require modernization.
+
+# When is a workload a candiate for Refactor/Revise? (IaaS/PaaS)
+* The development team can recompile and repackage the application from existing source code.
+* The demands for this function or business requirements are not rapidly changing.
+* The application is not required with extremely short time-to-market deadline.
+
+# When is a workload a candidate for Rebuild? (PaaS)
+* Code or framework lock-in is an acceptable risk.
+* The organization is not small vendor risk averse.
+
+# When is a workload a candidate for Replace (SaaS)
+* Business users are prepared to modify their business processes.
+* The application requires a trivial level of process integration or customization.
+* Preserving data semantics is not a priority.
+
 
 ## Preparation
 
-Perform the following activities before you begin the procedure tasks: 
+For each workload being assessed gather the following information: 
 
-  1. tbd
-	
-  2. tbd
+  1. Rehost
+     
+     VM Image Assembly
+     Yes = The system admin team can assemble a VM image with full application stack and configure the necessary hardware.
+     No= The system admin team cannot assemble a VM image and configure the necessary hardware.
+     
+     3rd Party SW in VM
+     Yes = Third party software can be run in the VM and is supported by the vendor.
+     No = Third party software cannot be run in the VM and is not supported by the vendor or license agreements.
+
+     Fat-client Form Factor
+     Yes = The application has a "fat client" form factor.
+     No = The application has a "thin client" form factor.
+
+     Modernization Required
+     Yes = The application requires modernization.
+     No = The application does not require modernization.
+
+  2. Refactor/Revise
+
+     Existing Source Code
+     Yes = The development team can recompile and repackage the application from existing source code.
+     No = The develop team cannot recompile and repackage the application from existing source code.
+
+     Functional Change
+     Yes = The demands for this function or business requirements are rapidly changing.
+     No = The demands for this function or business requirements are not rapidly changing.
+
+     Time-to-Market
+     Yes = The application is required with extremely short time-to-market deadline.
+     No = The application is not required with extremely short time-to-market deadline.
+     
+  3. Rebuild
+     
+     Lock-in Unacceptability
+     Yes = Code or framework lock-in is an unacceptable risk.
+     No = Code or framework lock-in is an acceptable risk.
+
+     Small Vendor Aversion
+     Yes = The organization is small vendor risk averse.
+     No = The organization is not small vendor risk averse.
+
+  4. Replace
+     
+     Change-Ready Business
+     Yes = Business users are prepared to modify their business processes.
+     No = Business users are not prepared to modify their business processes.
+
+     Non-Trivial Process Integration
+     Yes = The application requires a non-trivial level of process integration or customization.
+     No = The application requires a trivial level of process integration or customization.
+
+     Data Semantics
+     Yes = Preserving data semantics is a priority.
+     No = Preserving data semantics is not a priority.
+
+
 
 ## Procedure
 
-Use this procedure to xxx:
+Use this procedure to determine which cloud service model a workload should be migrated to:
 
-   1. tbd
+   1. Open the same file you downloaded in Profiling-your-Workloads
    
-   2. tbd
+   2. Fill out the Segment Applications worksheet with the information gathered in the Preparation section.
    
-   3. tbd
+   3. Save the file
 
 ## Next steps
 
-add link to next topic
+Prioritizing-Cloud-Model-Alternatives.md
